# tac

./: LICENSE  README.md  pyproject.toml
src/tac/: __init__.py  client.py  network.py  server.py
