[tool.poetry]
name = "tac"
version = "0.1.0"
description = "TAC Online Spiel"
authors = ["Yvan Nollet <yvan.nollet@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
